--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 html {
@@ -18,6 +19,7 @@ body {
     min-height: 100vh;
     overflow: hidden;
     position: relative;
+    width: 100%;
 }
 
 #canvas {
@@ -33,23 +35,60 @@ body {
 .panels-container {
    position: relative;
    z-index: 1;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 90%;
+   height: 60%;
+
+}
+
+.panel {
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    color: white;
+    flex: 0.5;
+    margin: 10px;
+    position: relative;
+    transition: flex 0.7s ease-in;
+    -webkit-transition: all 700ms ease-in;
+}
+
+.panel.active {
+    flex: 5;
+}
+
+.panel h3 {
+    font-size: 24px;
+    top: 20px;
+    left: 20px;
+    position: absolute;
+    opacity: 0;
+}
+
+.panel.active h3 {
+    opacity: 1;
+    transition: opacity 0.3s ease-in 0.4s;
 }
 
 #panel-hangman {
-    background-color: blueviolet;
+    background-color: blueviolet; 
 }
 
 #panel-ttt {
-    background-color: blanchedalmond;
-
+    background-color: rgb(158, 217, 70);
 }
 
 #panel-simon {
-    background-color: green;
-
+    background-color: red;
 }
 
 #panel-rps {
     background-color: orange;
-
 }
